updated model booking code